added noto serif  google font

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
     <header>
             <nav class="Navbar">
-                <h3 class="Brand"></h3>
+                <img src="./B12A02-Responsive-Flowers/assets/logo.png" alt="Logo">
+                <ul class="Navlinks">
+                    <li></li>
+                </ul>
+                
 
 
             </nav>
