add new section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header class="header">
             <nav class="header-bar" class="Navbar display-flex">
                 <img src="/B12A02-Responsive-Flowers/assets/logo.png" alt="Logo">
-                <ul class="Navlinks  display-flex ">
+                <ul class="Nav-links  display-flex ">
                     <li class="nav-item"><a href="" class="nav-link dark-gray">Home</a></li>
                     <li class="nav-item"><a href="" class="nav-link light-dark-gray noto-serif">Shop</a></li>
                     <li class="nav-item"><a href="" class="nav-link light-dark-gray">About Us</a></li>
