--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
         <header class="header">
             <nav class="header-bar" class="Navbar display-flex">
-                <img src="/B12A02-Responsive-Flowers/assets/logo.png" alt="Logo">
+                <img src="/assets/logo.png" alt="Logo">
                 <ul class="Nav-links  display-flex ">
                     <li class="nav-item"><a href="" class="nav-link dark-gray">Home</a></li>
                     <li class="nav-item"><a href="" class="nav-link light-dark-gray noto-serif">Shop</a></li>
@@ -36,7 +36,7 @@
                         <P class="title-des light-dark-gray">Indulge your senses with the beauty and fragrance of <br> our fresh flower shop. From classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are perfect for any occasion.</P>
                     </div>
                     <div class="Banner-image">
-                        <img src="/B12A02-Responsive-Flowers/assets/hero-flower.png" alt="Flower">
+                        <img src="/assets/hero-flower.png" alt="Flower">
                     </div>
             </div>
         </header>
@@ -50,49 +50,49 @@
             </p>
            <div class="card-container">
            <div class="card">
-              <img src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="Lily Blossom" />
+              <img src="/assets/sample-flower-image.png" alt="Lily Blossom" />
               <h3>Lily Blossom</h3>
               <p class="price">20 USD</p>
               <button>Add to Cart</button>
            </div>
            <div class="card">
-              <img src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="Lily Blossom" />
+              <img src="/assets/sample-flower-image.png" alt="Lily Blossom" />
               <h3>Lily Blossom</h3>
               <p class="price">20 USD</p>
               <button>Add to Cart</button>
            </div>
            <div class="card">
-              <img src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="Lily Blossom" />
+              <img src="/assets/sample-flower-image.png" alt="Lily Blossom" />
               <h3>Lily Blossom</h3>
               <p class="price">20 USD</p>
               <button>Add to Cart</button>
            </div>
            <div class="card">
-              <img src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="Lily Blossom" />
+              <img src="/assets/sample-flower-image.png" alt="Lily Blossom" />
               <h3>Lily Blossom</h3>
               <p class="price">20 USD</p>
               <button>Add to Cart</button>
            </div>
            <div class="card">
-              <img src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="Lily Blossom" />
+              <img src="/assets/sample-flower-image.png" alt="Lily Blossom" />
               <h3>Lily Blossom</h3>
               <p class="price">20 USD</p>
               <button>Add to Cart</button>
            </div>
            <div class="card">
-              <img src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="Lily Blossom" />
+              <img src="/assets/sample-flower-image.png" alt="Lily Blossom" />
               <h3>Lily Blossom</h3>
               <p class="price">20 USD</p>
               <button>Add to Cart</button>
            </div>
            <div class="card">
-              <img src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="Lily Blossom" />
+              <img src="/assets/sample-flower-image.png" alt="Lily Blossom" />
               <h3>Lily Blossom</h3>
               <p class="price">20 USD</p>
               <button>Add to Cart</button>
            </div>
            <div class="card">
-              <img src="/B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="Lily Blossom" />
+              <img src="/assets/sample-flower-image.png" alt="Lily Blossom" />
               <h3>Lily Blossom</h3>
               <p class="price">20 USD</p>
               <button>Add to Cart</button>
@@ -145,7 +145,7 @@
   <div class="container footer-inner">
 
     <div class="footer-column">
-      <img src="/B12A02-Responsive-Flowers/assets/logo.png" alt="Logo" class="footer-logo" />
+      <img src="/assets/logo.png" alt="Logo" class="footer-logo" />
       <p class="footer-description inter">
         Indulge your senses with the beauty and fragrance of our fresh flower shop.
       </p>                                                                  
@@ -170,10 +170,10 @@
     </div>
     <div class="footer-column social-icons">
       <div class="icons">
-        <a href="#"><img src="/B12A02-Responsive-Flowers/assets/icon-facebook.png" alt="Facebook" /></a>
-        <a href="#"><img src="/B12A02-Responsive-Flowers/assets/icon-linkedin.png" alt="Instagram" /></a>
-        <a href="#"><img src="/B12A02-Responsive-Flowers/assets/icon-twitter.png" alt="Twitter" /></a>
-        <a href="#"><img src="/B12A02-Responsive-Flowers/assets/icon-youtube.png" alt="Youtube" /></a>
+        <a href="#"><img src="/assets/icon-facebook.png" alt="Facebook" /></a>
+        <a href="#"><img src="/assets/icon-linkedin.png" alt="Instagram" /></a>
+        <a href="#"><img src="/assets/icon-twitter.png" alt="Twitter" /></a>
+        <a href="#"><img src="/assets/icon-youtube.png" alt="Youtube" /></a>
       </div>
     </div>
 
